temp converter is functional